--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "",
@@ -15,7 +16,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
-    "pg": "^8.17.2",
-    "prettier": "^3.8.1"
+    "pg": "^8.18.0",
+    "prettier": "^3.8.1",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.5"
   }
 }
